fix group spacing

--- a/client/styles/master.css
+++ b/client/styles/master.css
@@ -624,20 +624,20 @@ img {
 #post .function-group-carrier {
     margin-bottom: -18px;
 }
-#post .function-group:not(:last-child) {
+/*#post .function-group:not(:last-child) {
     margin-bottom:15px;
-}
+}*/
 
 .height-18 .group-item { height:18px; }
-.height-18 .function-group:last-child { margin-bottom:26px; }
+.height-18 .function-group { margin-bottom:26px; }
 
 .height-26 .group-item { height:26px; }
-.height-26 .function-group:last-child { margin-bottom:26px; }
+.height-26 .function-group { margin-bottom:26px; }
 
 .height-32 .group-item { height:32px; }
-.height-32 .function-group:last-child { margin-bottom:20px; }
+.height-32 .function-group { margin-bottom:20px; }
 
-.diagram-by-example .function-group:last-child { margin-bottom:0 !important; }
+.diagram-by-example .function-group { margin-bottom:0 !important; }
 
 /***** SPACING AGAIN *****/
 .no-vertical-margin > .MJXc-display,
